<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">autosuggest voice only</string>
    <string name="welcome_to_autosuggest">Welcome to Autosuggest voice sample</string>
    <string name="selected_info">Selected info</string>
    <string name="customise_the_autosuggest_component">Customise the AutoSuggest Component</string>
    <string name="return_coordinates">return coordinates</string>
    <string name="placeholder">placeholder</string>
    <string name="language">language</string>
    <string name="language_info">AutoSuggest will search in all languages. However, you can additionally specify a fallback language, to help the API in situations where the input is particularly messy.</string>
    <string name="focus_hint">focus, i.e: 51.508354, -0.12549861</string>
    <string name="focus_info">Comma separated lat/lng of point to focus on. Example value:51.521251,-0.203586</string>
    <string name="clip_to_country_hint">clip to country</string>
    <string name="clip_to_country_info">Confine results to a given country or comma separated list of countries. Example value: GB,US</string>
    <string name="clip_to_circle_hint">clip to circle</string>
    <string name="clip_to_circle_info">Restrict AutoSuggest results to a circle, specified by lat,lng,kilometres, where kilometres in the radius of the circle. For convenience, longitude is allowed to wrap around 180 degrees. For example 181 is equivalent to -179.</string>
    <string name="clip_to_box_hint">clip to box</string>
    <string name="clip_to_box_info">Confine results to a bounding box specified using co-ordinates. Example value: 51.521,-0.343,52.6,2.3324</string>
    <string name="clip_to_polygon_hint">clip to polygon</string>
    <string name="clip_to_polygon_info">Restrict AutoSuggest results to a polygon, specified by a comma-separated list of lat,lng pairs. The polygon should be closed, i.e. the first element should be repeated as the last element; also the list should contain at least 4 entries. The API is currently limited to accepting up to 25 pairs.</string>
    <string name="voice_enabled">voice enabled</string>
    <string name="voice_placeholder_header">voice placeholder</string>
    <string name="voice_language">voice language</string>
    <string name="voice_language_info">The voice language request parameter is defaulted to "en". The language code provided is used to configure both the Speechmatics ASR, and the what3words AutoSuggest algorithm.</string>
    <string name="voice_fullscreen">voice fullscreen</string>
    <string name="voice_fullscreen_info">The speech recognition start inline by default but use this property to change to a full screen.</string>
    <string name="suggestion_list_below">Suggestion list below</string>
    <string name="show_suggestions_picker">show suggestions picker</string>
</resources>